k8s/clusters/cluster-0/manifests/selfhosted/gitlab/ingress.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: gitlab
  namespace: selfhosted
spec:
  externalName: "gitlab.${SECRET_INTERNAL_DOMAIN}"
  type: ExternalName

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gitlab-ingress
  namespace: selfhosted
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-production"
    nginx.ingress.kubernetes.io/cors-allow-headers: "X-Forwarded-For, X-Real-IP, X-Frame-Options, X-Content-Type-Options, X-Forwarded-Proto"
    nginx.ingress.kubernetes.io/proxy-body-size: "10G"
spec:
  ingressClassName: "nginx-external"
  rules:
  - host: &host gitlab.${SECRET_DOMAIN}
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: gitlab
            port: 
              number: 8083
  tls:
  - hosts:
    - *host
    secretName: tls.gitlab
status:
  loadBalancer: {}
